<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingHorizontal="23dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        app:cardBackgroundColor="@color/yellowLightColor"
        app:cardCornerRadius="75dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/abhayalibre_bold"
        android:text="@string/txtAppName"
        android:textColor="@color/yellowLightColor"
        android:textSize="45sp" />

    <LinearLayout
        android:id="@+id/lnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtUserName"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtPassword"
            android:textColor="@color/whiteColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:text="@string/txtForget"
        android:textColor="@color/whiteColor"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnLogin"
        android:layout_marginTop="54dp"
        android:background="@drawable/bg_button"
        android:elevation="15dp"
        android:text="@string/txtLogin"
        android:textColor="@color/whiteColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDontHaveAcc"
            android:textColor="@color/whiteColor"/>
        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSignUp"
            android:textColor="@color/mainColor"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>