<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:layout_gravity="center"
    android:paddingHorizontal="23dp"
    tools:context=".ForgotActivity">


    <ImageView
        android:id="@+id/icBack"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icBack"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/abhayalibre_bold"
        android:text="@string/txtForgotPassword"
        android:textColor="@color/yellowLightColor"
        android:textSize="45sp"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txtDescForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPassword"
        android:gravity="center"
        android:text="@string/DESC_PASSWORD"
        android:textColor="@color/yellowLightColor"
        android:textSize="12sp"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/lnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDescForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18sp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/ENTER_EMAIL"
                android:textColorHint="@color/mainColor"
                android:textColor="@color/mainColor"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnForgot"
        android:layout_marginTop="54dp"
        android:background="@drawable/bg_button"
        android:elevation="15dp"
        android:text="@string/SEND"
        android:textColor="@color/whiteColor"/>
</RelativeLayout>