<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:layout_gravity="center"
    android:paddingHorizontal="23dp"
    tools:context=".VerifiActivity">


    <ImageView
        android:id="@+id/iClose"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/txtOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iClose"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/abhayalibre_bold"
        android:text="@string/OTP"
        android:textColor="@color/yellowLightColor"
        android:textSize="45sp"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txtDescForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtOTP"
        android:gravity="center"
        android:text="@string/DESC_OTP"
        android:textColor="@color/yellowLightColor"
        android:textSize="12sp"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/lnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDescForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvNum1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtNum1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp"
                android:lines="1"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvNum2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtNum2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp"
                android:lines="1"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvNum3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="25dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtNum3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp"
                android:lines="1"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvNum4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:background="@color/whiteColor"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/edtNum4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textColor="@color/mainColor"
                android:textSize="15sp"
                android:lines="1"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnForgot"
        android:layout_marginTop="54dp"
        android:background="@drawable/bg_button"
        android:elevation="15dp"
        android:text="@string/SEND"
        android:textColor="@color/whiteColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVerify"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DONT_HAVE_CODE"
            android:textColor="@color/whiteColor"/>
        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RESEND"
            android:textColor="@color/mainColor"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>