<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailProductActivity">

    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBack"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="@color/buttonColor"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCart"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@color/buttonColor"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/icCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_cart" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/sliderImage"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="@color/indicatorSelectedColor"
        app:sliderIndicatorUnselectedColor="@color/indicatorUnselectedColor"
        app:sliderScrollTimeInSec="5"
        app:sliderStartAutoCycle="true" />

    <LinearLayout
        android:id="@+id/lnProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="18dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderImage">

        <TextView
            android:id="@+id/txtNameProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtNameProduct"
            android:textColor="@color/textColor"
            android:textSize="@dimen/largeSize"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/lnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/AMOUNT"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txtPrice"
                android:layout_below="@id/lnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:text="@string/PRICE"
                android:textSize="@dimen/largeSize"
                android:textStyle="bold"
                android:textColor="@color/textColor"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:text="@string/DESC_PRODUCT"
        android:textSize="@dimen/mediumSize"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/lnProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/lnSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/txtDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SELECT_YOUR_DEVICE"
            android:textSize="@dimen/mediumXSize"
            android:textColor="@color/textColor"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SELECT"
            app:boxBackgroundColor="@color/selectBoxColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/lnSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QUANTITY"
            android:textSize="18sp"
            android:textColor="@color/textColor"/>
        
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/selectBoxColor">
                <ImageView
                    android:id="@+id/icSubtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_subtract"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:text="1"
                android:textSize="18sp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/selectBoxColor">
                <ImageView
                    android:id="@+id/icAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_add"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/buttonColor"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_cart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart ="15dp"
                android:layout_gravity="center"
                android:text="@string/ADD_TO_CART"
                android:textSize="20sp"
                android:textColor="@color/whiteColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/cvAddToCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/buttonLightColor"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_gravity="center"
                android:text="@string/BUY_NOW"
                android:textSize="20sp"
                android:textColor="@color/whiteColor"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>